    * 1393 FIX: casa_cpu_temp, casa_cpu_util: Change service description to standard...
            NOTE: Please refer to the migration notes!
    * 1104 FIX: winperf_if: Improved matching of data from wmic_if.bat / wmic_if.ps1 scripts...

    Multisite:
    * 1066 Implemented Dashboard Designer...
    * 1392 WATO Folder filter: show only the paths a user is allowed to see
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
    * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...

    WATO:
    * 1096 New WATO webservices: manage hosts via webinterface...
    * 1155 NagVis map edit/view permissions can now be set using roles/groups...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...
    * 1153 FIX: Changed custom user attributes can now be used immediately...
    * 0201 FIX: Fixed error message in Rulelist of RBN...
    * 1100 FIX: WATO backup domains: fixed bug were excluded files still got deleted on snapshot restore...
    * 1101 FIX: WATO check parameter: renamed 'Nominal Voltages' to 'Voltage Levels..'
    * 1396 FIX: Fix default setting of Enable sounds in views...
    * 1109 FIX: WATO active checks: passwords no longer shown as plain text....

    Notifications:
    * 1151 Add variables (HOST/SERVICE)ACK(AUTHOR/COMMENT) to notification context...
    * 1394 HTML notifications have a new content field for debugging variables...
    * 1156 FIX: Graphs in HTML mails are now sent again where they where missing...